Fixed thymeleaf templates

--- a/src/main/resources/templates/updateContact.html
+++ b/src/main/resources/templates/updateContact.html
@@ -10,10 +10,7 @@
     <br>
     <form th:action="@{'/saveContact/' + ${idUser}}" th:object="${contact}" method="post">
         <table border="0" cellpadding="10">
-            <tr>
-                <td>User ID:</td>
-                <td><input type="text" th:field="*{id}" readonly="readonly"/></td>
-            </tr>
+                <input type="hidden" th:field="*{id}" readonly="readonly"/>
             <tr>
                 <td>Name:</td>
                 <td><input type="text" th:field="*{name}"/></td>
